--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,21 @@
-html,
-body {
+html, body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+#bg {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  background-color: mediumspringgreen;
+  color: white;
 }
 
-* {
-  box-sizing: border-box;
+#layout {
+  color: white;
+  background-color:black;
 }
