--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@use 'base';
+
 $grid-bg: mediumspringgreen;
 $grid-color: white;
 
@@ -19,12 +21,12 @@ html, body {
 }
 
 #layout {
-  color: white;
+  color: base.$secondary-color;
 }
 
 @keyframes up {
   0%   {
-    transform: translateY(25%);
+    transform: translateY(50%);
   }
   100% {
     transform: translateY(0%);
