--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -1,2 +1,6 @@
-$primary-color: black;
-$secondary-color: white;
+$primary-color: #414141;
+$secondary-color: #C87777;
+
+$text-color: white;
+$footer-color: #1C1C1C;
+$card-color: #585858;
