--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,4 +5,5 @@ html, body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: base.$primary-color
 }
