--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,5 +5,45 @@ html, body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: base.$primary-color
+  background-color: base.$primary-color;
+  color: base.$text-color;
+}
+
+.section, %section {
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+
+.stripe {
+  background-image: url(../public/stripe.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  width: 100%;
+  height: 150%;
+}
+
+.section-stripe {
+  @extend %section;
+  min-height: 150%;
+}
+
+%header, #header {
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+h1 {
+  @extend %header;
+  font-weight: bold;
+  margin: 10px;
+}
+
+h2 {
+  @extend %header;
+  font-weight: normal;
+  margin: 5px;
 }
