--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -47,3 +47,9 @@ h2 {
   font-weight: normal;
   margin: 5px;
 }
+
+.title {
+  letter-spacing: 0.05em;
+  font-size: 36px;
+  margin-bottom: 40px;
+}
