--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,27 +9,6 @@ html, body {
   color: base.$text-color;
 }
 
-.section, %section {
-  text-align: center;
-  margin-top: 100px;
-  margin-bottom: 50px;
-}
-
-.stripe {
-  background-image: url(../public/stripe.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: absolute;
-  width: 100%;
-  height: 150%;
-}
-
-.section-stripe {
-  @extend %section;
-  height: 100%;
-}
-
 %header, #header {
   text-align: center;
   margin-top: 100px;
@@ -53,3 +32,61 @@ h2 {
   font-size: 36px;
   margin-bottom: 40px;
 }
+
+#sections {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section, %section {
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  max-width: 1000px;
+}
+
+.stripe {
+  background: linear-gradient(169.84deg, rgba(65, 65, 65, 0) 25.11%, #9A5C5C 25.11%, #C87777 33.54%, #C87777 79.4%, rgba(65, 65, 65, 0) 79.4%);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: fill;
+  right: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 125%;
+}
+
+.section-stripe {
+  @extend %section;
+  min-height: 2000%;
+}
+
+@media screen and (min-width: 768px) {
+  .stripe {
+    height: 175%;
+  }
+  .section-stripe {
+    min-height: 175%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .stripe {
+    height: 175%;
+  }
+  .section-stripe {
+    min-height: 175%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .stripe {
+    height: 200%;
+  }
+  .section-stripe {
+    min-height: 200%;
+  }
+}
+
