--- a/styles/card.scss
+++ b/styles/card.scss
@@ -42,7 +42,7 @@
     }
 
     .card-icon-menu {
-        padding: 10px 20px;
+        padding: 20px 10px 0 10px;
         display: flex;
         flex-wrap: nowrap;
         justify-content: flex-start;
