--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,10 +1,23 @@
 @use 'base';
 
+@font-face {
+  font-family: 'Istok Web';
+  src: url('../public/fonts/IstokWeb-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Istok Web';
+  src: url('../public/fonts/IstokWeb-Bold.ttf');
+  font-weight: bold;
+  font-style: bold;
+}
+
 html, body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Istok Web;
   background-color: base.$primary-color;
   color: base.$text-color;
 }
@@ -31,6 +44,7 @@ h2 {
   letter-spacing: 0.05em;
   font-size: 36px;
   margin-bottom: 40px;
+  font-weight: bold;
 }
 
 #sections {
@@ -41,7 +55,7 @@ h2 {
 
 .section, %section {
   text-align: center;
-  margin-top: 100px;
+  margin-top: 125px;
   margin-bottom: 50px;
   max-width: 1000px;
 }
@@ -60,7 +74,6 @@ h2 {
 
 .section-stripe {
   @extend %section;
-  min-height: 2000%;
 }
 
 @media screen and (min-width: 768px) {
