--- a/styles/organizations.scss
+++ b/styles/organizations.scss
@@ -2,10 +2,11 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    margin: 50px;
+    margin-top: 50px;
     flex-wrap: wrap;
 }
 
 .logo {
     margin: 25px 50px 25px 50px;
+    height: 150px;
 }
