--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -45,6 +45,8 @@ h2 {
   font-size: 36px;
   margin-bottom: 40px;
   font-weight: bold;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 #sections {
