--- a/css/card-body.css
+++ b/css/card-body.css
@@ -9,6 +9,7 @@
     background-color: #121212;
     opacity: 1;
     background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #121212 9px ), repeating-linear-gradient( #26262655, #262626 );
+
 }
 
 #body-art {
@@ -60,6 +61,11 @@
     margin-top: 16pt;
 }
 
+#body.webgame {
+    padding: 0;
+    margin: 0;
+}
+
 @media screen and (max-width: 680px) {
     #body-art img {
         height: 200pt;
@@ -76,5 +82,10 @@
     }
     #body {
         padding: 18pt 6pt;
+    }
+
+    #body.webgame {
+        padding: 0;
+        margin: 0;
     }
 }
