--- a/docs/css/text.css
+++ b/docs/css/text.css
@@ -6,27 +6,25 @@ a .hover {
     color: white;
 }
 
-html {
-    font-family: 'Inter';
-    font-size: 10pt;
-}
-
 h1 {
     font-family: 'Inter';
     font-size: 20pt;
     margin: 0px;
+    color: white;
 }
 h2 {
     font-family: 'Inter';
     font-size: 10pt;
     font-weight: normal;
     margin:0;
+    color: white;
 }
 p {
     font-family: 'Inter';
     font-size: 8pt;
     opacity: 0.8;
     margin:0;
+    color: white;
 }
 
 @media screen and (max-width: 680px) {
