--- a/docs/css/card.css
+++ b/docs/css/card.css
@@ -5,8 +5,6 @@
 }
 
 .card{
-    background: #1C1C1C;
-    border: 1pt solid #7D7D7D;
     border-radius: 16pt;
     display: flex;
 }
@@ -15,25 +13,38 @@
     display: none;
     width: 360px;
     height: 630px;
-    flex-direction: column;
 }
 
 .card.web {
     display: flex;
     width: 630px;
     height: 360px;
-    padding-left: 64px;
-    padding-right: 64px;
+    padding-right: 128px;
+}
+
+.card-layout {
+    display: flex;
     flex-direction: row;
+    padding-left: 64px;
+    background: #1C1C1C;
+    border: 1pt solid #7D7D7D;
+    border-radius: 16pt;
 }
 
 @media screen and (max-width: 680px) {
     .card.mobile {
         display: flex;
+        width: 360px;
+        height: 630px;
     }
     
     .card.web {
         display: none;
+    }
+
+    .card-layout {
+        flex-direction: column;
+        padding-left: 0;
     }
 }
 
