Change border colors.

--- a/docs/css/card.css
+++ b/docs/css/card.css
@@ -27,7 +27,7 @@
     flex-direction: row;
     padding-left: 64px;
     background: #1C1C1C;
-    border: 1pt solid #7D7D7D;
+    border: 1pt solid #343434;
     border-radius: 16pt;
 }
 
