--- a/docs/css/ribbon.css
+++ b/docs/css/ribbon.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1pt solid #7D7D7D;
+    border: 1pt solid #343434;
 }
 
 /* .ribbon.web {
