--- a/docs/css/card.css
+++ b/docs/css/card.css
@@ -5,36 +5,46 @@
 }
 
 .card{
-    background: #1C1C1C;
-    border: 1pt solid #7D7D7D;
     border-radius: 16pt;
-    width: 480pt;
-    height: fit-content;
+    display: flex;
 }
 
-.card.webgame  {
-    width: 1280px;
+.card.mobile {
+    display: none;
+    width: 360px;
+    height: 630px;
+}
+
+.card.web {
+    display: flex;
+    width: 630px;
+    height: 360px;
+    padding-right: 128px;
+}
+
+.card-layout {
+    display: flex;
+    flex-direction: row;
+    padding-left: 64px;
+    background: #1C1C1C;
+    border: 1pt solid #343434;
+    border-radius: 16pt;
 }
 
 @media screen and (max-width: 680px) {
-    .card {
-        width: 95%;
+    .card.mobile {
+        display: flex;
+        width: 360px;
+        height: 630px;
     }
-    .card.webgame  {
-        width: 1280px;
+    
+    .card.web {
+        display: none;
+    }
+
+    .card-layout {
+        flex-direction: column;
+        padding-left: 0;
     }
 }
 
-@media screen and (min-width: 1080px) {
-    .card {
-        transform: rotate(6deg);
-    }
-    .card.webgame  {
-        width: 1280px;
-        transform: rotate(0deg);
-    }
-    .card.info  {
-        width: 860px;
-        transform: rotate(0deg);
-    }
-}
