--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -1,10 +1,11 @@
 body {
     /* background-color: #1C1C1C; */
+    background: radial-gradient(circle, rgba(255, 255, 255, 0.07) 0%, #ffffff00 75%);
     color: white;
     font-size: 16pt;
     font-family: Arial, Helvetica, sans-serif;
-    padding-top: 100pt;
-    padding-bottom: 100pt;
+    padding-top: 200pt;
+    padding-bottom: 200pt;
 }
 
 html {
@@ -12,12 +13,15 @@ html {
     padding: 0;
 
     /* https://www.magicpattern.design/tools/css-backgrounds */
-    background-color: #000000;
     opacity: 1;
     background-image:  linear-gradient(135deg, #191919 25%, transparent 25%), linear-gradient(225deg, #191919 25%, transparent 25%), linear-gradient(45deg, #191919 25%, transparent 25%), linear-gradient(315deg, #191919 25%, #000000 25%);
     background-position:  40px 0, 40px 0, 0 0, 0 0;
     background-size: 40px 40px;
     background-repeat: repeat;
+
+    overflow-x: hidden;
+    -ms-overflow-style: none;
+    scrollbar-width: none; 
 }
 
 @media screen and (max-width: 680px) {
@@ -26,11 +30,4 @@ html {
         padding-bottom: 200pt;
     }
 
-}
-
-@media screen and (min-width: 1080px) {
-    body {
-        margin-top: 0;
-        margin-bottom: 0;
-    }
 }
