Simulate flip with 2 divs.

--- a/css/card.css
+++ b/css/card.css
@@ -48,3 +48,13 @@
     }
 }
 
+.card-layout-back {
+    display: flex;
+    flex-direction: row;
+    padding-left: 64px;
+    /* background: #1C1C1C; */
+    border: 1pt solid #343434;
+    border-radius: 16pt;
+    /* position: absolute; */
+}
+
