--- a/css/text.css
+++ b/css/text.css
@@ -51,3 +51,11 @@ p {
     margin:0;
     color: white;
 }
+
+.big-card-header p {
+    font-family: 'Courier New';
+    font-size: 12pt;
+    opacity: 0.8;
+    margin:0;
+    color: white;
+}
