Fix some borders.

--- a/css/big-card.css
+++ b/css/big-card.css
@@ -18,7 +18,7 @@
     flex-direction: column;
     background: #1C1C1C;
     border: 1pt solid #343434;
-    border-radius: 16pt;
+    border-radius: 16pt 16pt 0 0;
 }
 
 .big-card-header {
@@ -41,7 +41,6 @@
     justify-content: center;
     align-items: flex-start;
     padding-top: 32px;
-    padding-bottom: 32px;
 }
 
 @media screen and (max-width: 800px) {
