--- a/css/items.css
+++ b/css/items.css
@@ -27,6 +27,7 @@
     align-items: center;
     padding-left: 32px;
     padding-right: 32px;
+    padding-bottom: 32px;
     border: 1pt solid #343434;
 }
 
