--- a/css/card.css
+++ b/css/card.css
@@ -1,7 +1,9 @@
 .card-container {
+    margin-top: 150pt;
     display: flex;
     justify-content: center;
     width: 100%;
+    position: absolute;
 }
 
 .card{
@@ -37,6 +39,10 @@
         width: 360px;
         height: 630px;
     }
+
+    .card-container {
+        margin-top: 0;
+    }
     
     .card.web {
         display: none;
@@ -47,4 +53,3 @@
         padding-left: 0;
     }
 }
-
