--- a/css/global.css
+++ b/css/global.css
@@ -1,10 +1,10 @@
 body {
     /* background-color: #1C1C1C; */
-    background: radial-gradient(circle, rgba(255, 255, 255, 0.10) 0%, #ffffff00 75%);
-    color: white;
+    /* background: radial-gradient(circle, rgba(255, 255, 255, 0.10) 0%, #ffffff00 75%);
+    color: white; */
     font-size: 16pt;
     font-family: Arial, Helvetica, sans-serif;
-    padding-top: 200pt;
+    padding-top: 50pt;
     padding-bottom: 200pt;
 }
 
@@ -18,6 +18,8 @@ html {
     background-position:  40px 0, 40px 0, 0 0, 0 0;
     background-size: 40px 40px;
     background-repeat: repeat;
+
+    color: white;
 
     overflow-x: hidden;
     -ms-overflow-style: none;
