--- a/css/text.css
+++ b/css/text.css
@@ -36,3 +36,26 @@ p {
         opacity: 0.8;
     }
 }
+
+.items h2 {
+    font-family: 'Courier New';
+    font-size: 16pt;
+    font-weight: normal;
+    margin:0;
+    color: white;
+}
+.items p {
+    font-family: 'Courier New';
+    font-size: 12pt;
+    opacity: 0.8;
+    margin:0;
+    color: white;
+}
+
+.big-card-header p {
+    font-family: 'Courier New';
+    font-size: 12pt;
+    opacity: 0.8;
+    margin:0;
+    color: white;
+}
