--- a/css/global.css
+++ b/css/global.css
@@ -4,8 +4,8 @@ body {
     color: white; */
     font-size: 16pt;
     font-family: Arial, Helvetica, sans-serif;
-    padding-top: 50pt;
-    padding-bottom: 200pt;
+    margin-top: 50pt;
+    margin-bottom: 200pt;
 }
 
 html {
@@ -27,13 +27,17 @@ html {
     -ms-overflow-style: none;
     scrollbar-width: none;
 
+}
+
+html, body {
     overflow-x: hidden;
+    overscroll-behavior-x: none;
 }
 
 @media screen and (max-width: 800px) {
     body {
         padding-top: 50pt;
-        padding-bottom: 200pt;
+        margin-bottom: 600pt;
     }
 
 }
