--- a/css/text.css
+++ b/css/text.css
@@ -1,3 +1,10 @@
+.text-only {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-around;
+}
+
 a {
     color: white;
 }
