--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -210,3 +210,14 @@ body {
 .border-white-0 {
   border-color: #ffffff;
 }
+
+.card-scc {
+  background-image: url('/teams/scc.jpg');
+
+  /* content: "";
+  opacity:0.2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; */
+}
