--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -212,12 +212,40 @@ body {
 }
 
 .card-scc {
-  background-image: url('/teams/scc.jpg');
+  background-image: url('/teams/scc-bg.png');
+  background-size: contain;
+  background-position-x: 30px;
+  background-position-y: 230px;
+  background-repeat: no-repeat;
+}
 
-  /* content: "";
-  opacity:0.2;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; */
+.card-tmems {
+  background-image: url('/teams/tmems-bg.png');
+  background-size: contain;
+  background-position-x: 30px;
+  background-position-y: 230px;
+  background-repeat: no-repeat;
+}
+
+.card-cylancemdr {
+  background-image: url('/teams/cylancemdr-bg.png');
+  background-size: contain;
+  background-position-x: 30px;
+  background-position-y: 230px;
+  background-repeat: no-repeat;
+}
+
+.card-skynet {
+  background-image: url('/teams/skynet-bg.png');
+  background-size: contain;
+  background-position-x: 30px;
+  background-position-y: 230px;
+  background-repeat: no-repeat;
+}
+
+.card-zodiactail {
+  background-image: url('/teams/zodiactail-bg.jpg');
+  background-size: cover;
+  background-position-x: -300px;
+  background-repeat: no-repeat;
 }
