--- a/src/components/tv-static.module.css
+++ b/src/components/tv-static.module.css
@@ -9,7 +9,7 @@
   background: repeating-linear-gradient(#111, #111 50%, white 50%, white);
   background-size: 5px 5px;
   filter: url(#noise);
-  animation: fadeOut 0.5s ease-in-out forwards;
+  animation: fadeOut 1s ease-in-out forwards;
   pointer-events: none;
 }
 
@@ -18,10 +18,10 @@
 } */
 
 @keyframes fadeOut {
-    from {
+    0% {
       opacity: 0.25;
     }
-    to {
+    100% {
       opacity: 0;
     }
   }
