--- a/src/components/tv-static.module.css
+++ b/src/components/tv-static.module.css
@@ -6,8 +6,8 @@
   height: calc(100%);
   top: -25px;
   left: -25px;
-  width: 100vw;
-  height: 100vh;
+  width: calc(100% + 25px);
+  height: calc(100% + 25px);
   /* overflow-y: hidden;
   overflow-x: hidden; */
   background: repeating-linear-gradient(#111, #111 50%, white 50%, white);
