--- a/src/components/tv-static.module.css
+++ b/src/components/tv-static.module.css
@@ -4,10 +4,10 @@
   position: absolute;
   width: calc(100%);
   height: calc(100%);
-  top: -100px;
-  left: -100px;
-  width: calc(100% + 100px);
-  height: calc(100% + 100px);
+  top: -50px;
+  left: -50px;
+  width: calc(100% + 50px);
+  height: calc(100% + 50x);
   /* overflow-y: hidden;
   overflow-x: hidden; */
   background: repeating-linear-gradient(#111, #111 50%, white 50%, white);
