--- a/src/components/tv-static.module.css
+++ b/src/components/tv-static.module.css
@@ -6,8 +6,8 @@
   height: calc(100%);
   top: -50px;
   left: -50px;
-  width: calc(100% + 50px);
-  height: calc(100% + 50x);
+  width: calc(100vw + 50px);
+  height: calc(100vh + 50px);
   /* overflow-y: hidden;
   overflow-x: hidden; */
   background: repeating-linear-gradient(#111, #111 50%, white 50%, white);
