--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,7 +82,7 @@ body {
 
 .bkg__spotlight {
   pointer-events: none;
-  position: fixed;
+  position: absolute;
   width: 100%;
   background: radial-gradient(
       75% 35% at 50% 50%,
@@ -119,7 +119,7 @@ body {
 @media (min-width: 768px) {
   .bkg__spotlight {
     pointer-events: none;
-    position: fixed;
+    position: absolute;
     width: 100%;
     background: radial-gradient(
         75% 35% at 50% 95%,
@@ -135,7 +135,7 @@ body {
       width: 100%;
       height: 100%;
       z-index: 2;
-      position: fixed;
+      position: absolute;
       top: 0;
       left: 0;
       bottom: 0;
