--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,3 +12,13 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.spacedTitle {
+  font-weight: 900;
+  font-size: 20pt;
+  line-height: 24pt;
+  letter-spacing: 2pt;
+  text-align: center;
+  margin-top: 20pt;
+  margin-bottom: 20pt;
+}
