--- a/src/app/blog/globals.css
+++ b/src/app/blog/globals.css
@@ -7,7 +7,6 @@ html {
     width: 760px;
     box-shadow: 5px 0px 5px rgba(0, 0, 0, 0.2),
     -5px 0px 5px rgba(0, 0, 0, 0.2);
-    color: white;
     /* padding-left: 16px;
     padding-right: 16px; */
 }
@@ -16,6 +15,30 @@ html {
     background-color: #0097c9;
     background: linear-gradient(to bottom, #0c4b65, #0097c9);
     border-bottom: 8px solid #ffcd08;
+    color: white;
+        /* https://online-fonts.com/fonts/acme-explosive/download */
+}
+
+.navbar-penguin {
+    background: linear-gradient(to bottom, #025374, #106793);
+       color: white;
+        /* https://online-fonts.com/fonts/acme-explosive/download */
+    font-family: acme;
+}
+
+.navbar-penguin a:hover {
+    color: yellow;
+    background-color: rgba(255, 255, 255, 0.443);
+}
+
+@font-face {
+    font-family: acme;
+    src: url("../fonts/acme.ttf");
+}
+
+@font-face {
+    font-family: acme-bold;
+    src: url("../fonts/acme-bold.ttf");
 }
 
 /* @media (min-width: 576px) { 
