--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,14 +5,13 @@
 html {
   margin: 0;
   padding: 0;
-  background-color: white;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: white;
+  /* background-color: white; */
 }
 
 .overflow-x-hidden {
