--- a/src/components/b-friends.module.css
+++ b/src/components/b-friends.module.css
@@ -1,3 +1,8 @@
 .darkshadow {
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.5);
+    /* box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.5); */
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.5),
+                /* inset 0 0 0 5px white, Inner border (5px wide) */
+                inset 4px 0 0 4px #003266, /* Middle border (10px wide from element edge) */
+                inset 8px 0 0 8px #00cafd; /* Outer border (15px wide from element edge) */
+           /*     inset 8px 8px 0 8px #00649b; /* Outer border (15px wide from element edge) */
 }
