force light theme on b

--- a/src/app/b/globals.css
+++ b/src/app/b/globals.css
@@ -1,6 +1,4 @@
-/* body {
-    background-color: #eeeeee;
-} */
+
 
 .base {
     /* background-color: #fdfad6; */
@@ -68,3 +66,6 @@
     }
  }
 
+ body {
+    color: black;
+ }
