alter layouts for a more dynamic rgb card

--- a/src/app/(personal)/b/globals.css
+++ b/src/app/(personal)/b/globals.css
@@ -1,4 +1,17 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
+html {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
 .base {
     /* background-color: #fdfad6; */
@@ -52,12 +65,12 @@
 
 @font-face {
     font-family: acme;
-    src: url("../fonts/acme.ttf");
+    src: url("./fonts/acme.ttf");
 }
 
 @font-face {
     font-family: acme-bold;
-    src: url("../fonts/acme-bold.ttf");
+    src: url("./fonts/acme-bold.ttf");
 }
 
 @media (min-width: 576px) { 
