--- a/src/components/tv-static.module.css
+++ b/src/components/tv-static.module.css
@@ -19,7 +19,13 @@
 
 @keyframes fadeOut {
     0% {
-      opacity: 0.25;
+      opacity: 1;
+    }
+        33% {
+      opacity: 0.75;
+    }
+        66% {
+      opacity: 0.5;
     }
     100% {
       opacity: 0;
