--- a/src/components/drawer-no-js.module.css
+++ b/src/components/drawer-no-js.module.css
@@ -2,4 +2,7 @@
     width: 100%;
     min-height: 400px;
     padding: 24px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
