--- a/src/components/drawer-no-js.module.css
+++ b/src/components/drawer-no-js.module.css
@@ -1,7 +1,7 @@
 .card {
     width: 100%;
     min-height: 400px;
-    padding: 24px;
+    padding-top: 24px;
     display: flex;
     align-items: center;
     flex-direction: column;
