--- a/src/components/b/hero.module.css
+++ b/src/components/b/hero.module.css
@@ -41,11 +41,26 @@
 .navbar {
     border-radius: 36px 36px 0 0;
     background-color: #023a69;
-    color: white;
+    color: #f6bb3c;
     width: 100%;
     height: 48px;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.navbar a {
+    color: white;
+    font-weight: 500;
+    letter-spacing: 0.5pt;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.navbar a:hover {
+    color: #f6bb3c;
+    font-weight: 500;
+    letter-spacing: 0.5pt;
+    text-decoration: none;
 }
