--- a/src/components/b/hero.module.css
+++ b/src/components/b/hero.module.css
@@ -50,12 +50,32 @@
     align-items: center;
 }
 
+@media (max-width: 576px) {
+    .navbarOuterContainer {
+        height: 158px;
+    }
+
+    .navbar {
+        height: 108px;
+        flex-wrap: wrap;
+        align-content: center;
+    }
+
+    .logoInnerContainer {
+        height: 156px;
+        flex-wrap: wrap;
+        padding-top: 36px;
+        padding-left: 8px;
+    }
+}
+
 .navbar a {
     color: white;
     font-weight: 500;
     letter-spacing: 0.5pt;
-    margin-left: 5px;
-    margin-right: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    white-space:nowrap;
 }
 
 .navbar a:hover {
