fix lint and update version and keep home page

--- a/src/app/(penguin)/b/globals.css
+++ b/src/app/(penguin)/b/globals.css
@@ -42,6 +42,12 @@ body {
     width: 100%;
 }
 
+@media (min-width: 1456px) {
+    .bgBody {
+        background-size: cover;
+    }
+}
+
 .bgContainer {
     position: absolute;
     z-index: -1;
